# mpv_audio_kit

./: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
darwin/Sources/mpv_audio_kit/: MediaSessionPlugin.swift  MpvAudioKitPlugin.swift
example/: README.md  example.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/atoms/: atom_button.dart  atom_close_x.dart  atom_dropdown.dart  atom_knob.dart  atom_label.dart  atom_level_meter.dart  atom_lfo_sine.dart  atom_lufs_meter.dart  atom_menu_bar.dart  atom_number_input.dart  atom_plot_chrome.dart  atom_slider.dart  atom_spectrum_curve.dart  atom_text_input.dart  atom_toggle.dart  pcm_band_processor.dart
example/lib/console/: command_catalog.dart  console_controller.dart  console_panel.dart  suggestion_engine.dart  suggestion_popup.dart
example/lib/inspector/: inspector_panel.dart
example/lib/preferences/: preferences_overlay.dart  preferences_sections.dart  prefs_bus.dart
example/lib/rack/: effect_card.dart  filter_catalog.dart  filter_picker.dart  fx_row.dart  rack.dart
example/lib/services/: audio_handler.dart  settings_service.dart
example/lib/shared/: player_stream_builder.dart  property_cards.dart  snack_messenger.dart
example/lib/shell/: breakpoints.dart  studio_app.dart  studio_scope.dart
example/lib/skin/: console_skin.dart  glyph.dart  paint_helpers.dart
example/lib/stage/: artwork_thumb.dart  spectrum_strip.dart  stage.dart  transport_bar.dart  transport_strip.dart  waveform_view.dart
example/lib/theme/: app_metrics.dart  app_theme.dart
example/lib/utils/: duration_format.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: mpv_audio_kit.podspec
ios/mpv_audio_kit/: Package.swift
lib/: mpv_audio_kit.dart
lib/src/: mpv_bindings.dart
lib/src/dsp/: band_processor.dart  dsp_async_io.dart  filter_tap_pipeline.dart  loudness_meter_pipeline.dart  pcm_node_decode.dart  (+3 more)
linux/: CMakeLists.txt  mpris_introspection.h  mpris_server.cc  mpris_server.h  mpv_audio_kit_plugin.cc
macos/: mpv_audio_kit.podspec
macos/mpv_audio_kit/: Package.swift
scripts/: bump_version.sh  generate_codec_fixtures.sh  generate_extra_fixtures.sh  generate_filter_fixtures.sh  sync_apple_sources.sh  update_cacert.sh
test/: player_no_init_test.dart
test/_helpers/: codec.dart  libmpv_resolver.dart  setter_test_helpers.dart  slow_core_shim.dart
test/dsp/: float32_from_byte_value_test.dart
test/event_isolate/: decode_mpv_node_test.dart
test/fixtures/: arnndn_model.rnnn
test/internal/: audio_effects_coverage_test.dart  audio_effects_extensions_test.dart  audio_effects_test.dart  audio_output_error_test.dart  derive_loop_test.dart  finalizer_cooperative_quit_test.dart  lifecycle_transitions_test.dart  locale_invariant_test.dart  locale_numeric_macos_test.dart  node_parsers_test.dart  orphan_handle_tracker_test.dart  playback_state_test.dart  player_api_surface_test.dart  to_string_pin_test.dart  uri_resolver_asset_collision_test.dart  uri_resolver_test.dart  window_function_test.dart
test/media_session/: README.md  channel_decode_test.dart  controller_test.dart  run.sh  set_media_session_race_test.dart
test/models/: audio_device_test.dart  audio_effects_updaters_test.dart  enums_test.dart  media_session_test.dart  media_test.dart  mpv_player_error_test.dart  mpv_prefetch_state_test.dart  player_state_test.dart  playlist_test.dart  spdif_test.dart  spectrum_settings_test.dart  waveform_data_test.dart
test/packaging/: apple_sources_publish_safety_test.dart
test/player/: playlist_nav_gate_test.dart
test/reactive/: default_specs_test.dart  mpv_property_spec_permissive_test.dart  property_registry_test.dart  reactive_property_test.dart
test/runtime/: player_runtime_test.dart
test/runtime_extended/: _audio_effects_param_corners.dart  af_command_diff_test.dart  async_dispose_race_test.dart  audio_effects_chain_runtime_test.dart  audio_effects_extensions_runtime_test.dart  audio_effects_param_ranges_test.dart  audit_defaults_vs_mpv_test.dart  audit_native_surface_probe_test.dart  clear_playlist_semantics_test.dart  codec_coverage_test.dart  cold_start_perf_test.dart  cover_art_test.dart  demuxer_cache_state_test.dart  diag_filter_tap_test.dart  dispose_dsp_streams_done_test.dart  dispose_during_init_test.dart  dispose_during_load_test.dart  dispose_during_seek_test.dart  dispose_escape_hatches_test.dart  dispose_immediate_test.dart  dispose_safety_test.dart  dispose_setters_state_error_test.dart  dispose_timing_test.dart  edge_cases_test.dart  error_paths_audio_output_test.dart  error_paths_test.dart  event_isolate_hang_path_test.dart  event_isolate_idle_test.dart  event_isolate_initial_burst_test.dart  external_audio_track_test.dart  finalizer_safety_net_test.dart  gapless_playback_test.dart  hook_priority_test.dart  http_header_isolation_test.dart  http_header_validation_test.dart  intent_axis_playlist_test.dart  isolation_guard_test.dart  lifecycle_races_test.dart  live_analysis_streaming_test.dart  load_policy_config_test.dart  (+53 more)
test/utils/: byte_data_slice_test.dart  duration_seconds_test.dart
test_app/: analysis_options.yaml  pubspec.yaml
test_app/integration_test/: android_audiotrack_test.dart  codec_coverage_test.dart  cold_start_main_thread_test.dart  dispose_mid_playback_stress_test.dart  dispose_mid_playback_test.dart  media_session_test.dart  open_ordering_asset_race_test.dart  smoke_test.dart  tls_handshake_test.dart
windows/: CMakeLists.txt  media_session_channel_win.cpp  media_session_channel_win.h  media_session_smtc.cpp  media_session_smtc.h  mpv_audio_kit_plugin.cpp
(+212 files in other folders)
